2006-02-02 Anatoly Sokolov <aesok@post.ru>

	*include/avr/signal.h: Include <avr/interrupt.h> file.
	[Fixed bug #15574]

2006-02-02 Anatoly Sokolov <aesok@post.ru>

	* include/avr/boot.h: Corrected a choice __boot_xxx macros.
	[Fixed bug #15559]

2006-01-31 Anatoly Sokolov <aesok@post.ru>

	* include/avr/iotnx4.h (GPIOR0): Rename from GPI0R0.
	* include/avr/iotnx5.h (GPIOR0): (Ditto.).
	* include/avr/iotnx61.h (GPIOR0): (Ditto.).
	[Fixed bug #15595]

2006-01-30 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: add tests for the ATmega406 support.
	* devtools/gen-avr-lib-tree.sh: add support for ATmega406.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* include/avr/iotm406.h: new file.
	* include/avr/Makefile.am: include new files.
	* doc/api/main_page.dox: Document support for ATmega406.
	* doc/api/using-tools.dox: (Ditto.)
 	* xml/patch-headers.py: add ATmega406.
	* doc/api/vectortable.dox: regenerate using patch-headers.py.

2006-01-29 Anatoly Sokolov <aesok@post.ru>

	* doc/api/main_page.dox: Move AT90CANxxx devices to Misc group.
	[Fixed bug #15519] 
	* include/avr/iotn2313.h (SIG_OUTPUT_COMPARE0A): Rename from 
	SIG_OUTPUT_COPMARE0A.
	[Fixed bug #15522]
	
2006-01-22 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* Released avr-libc 1.4.3.

2006-01-22 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: bump version.

2006-01-22 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix bug #15494: Compile warning and errors if compiler flag
	-Wundef flag specified
	* include/inttypes.h: turn #if on undefined macros into #ifdef.
	* include/stdint.h: always define __USING_MINT8 (to 0 or 1).
	* include/avr/boot.h: use __USING_MINT8 the new way.

2006-01-22 Anatoly Sokolov <aesok@post.ru>

	* include/avr/iotn2313.h (SPM_PAGESIZE): Add. 
	* include/avr/iotn24.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn25.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn261.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn44.h (SPM_PAGESIZE): (Ditto.).