@@ -1,3 +1,8 @@
+2006-02-07 Anatoly Sokolov <aesok@post.ru>
+
+	* libm/fplib/dtostrf.S: Use X_movw when possible. 
+	Use RCALL instead XCALL for calling 'pow' and 'ldexp' functions.
+
 2006-02-02 Anatoly Sokolov <aesok@post.ru>
 
 	*include/avr/signal.h: Include <avr/interrupt.h> file.
